# arepo_helper

./: .codecov.yml  .gitignore  .travis.yml  MANIFEST.in  README.rst  definitions.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
arepo_helper/: abstract_plot.py  analysis.py  arepo_files.py  arepo_helper.py  astro_utils.py  group_animation.py  group_frame.py  h5_file.py  ics.py  icwd2.py  names.py  pcolor_plot.py  plot_manager.py  plot_options.py  radial_plot.py  run.py  scatter_2d.py  sim_config.py  simulation.py  snapshot.py  species.py  test.py  utilities.py  wd_utils.py  wdec_results.py
arepo_helper/data/config/: 2016.json  2019.json  2020.json
arepo_helper/data/eostable/: data_logR  data_logT  data_logkappa  decaydata  species05.txt  species13.txt  (+4 more)
arepo_helper/libs/: boundmass.c  calcGrid.c  const.h  createICs.c  create_ics.cpp  create_ics.h  eos.c  eos.h  gadgetSnap.c  gadgetSnap.h  grid.c  helm_eos.c  helm_eos.cpp  helm_eos.h  ic.c  ic.cpp  ic.h  main.cpp  main.h  make_pcolor.cpp  make_pcolor.h  make_radial.cpp  make_radial.h  make_wdec.cpp  make_wdec.h  mersenne.h  omp_util.h  opal_eos.c  opal_eos.h  pix2vec_ring.h  pyeos.c  pyeos.h  pyhelm_eos.c  pyhelm_eos.cpp  pyhelm_eos.h  pyopal_eos.c  pyopal_eos.h  pysph.c  pysph.h  rgadget.c  (+10 more)
arepo_helper/tests/: test_arepo_helper.py
src/arepo_helper/: abstract_plot.py  analysis.py  arepo_files.py  const.py  group_animation.py  h5_file.py  names.py  plot_manager.py  run.py  sim_config.py  simulation.py  species.py  utilities.py  wdec_results.py
tests/: test_arepo_helper.py
(+54 files in other folders)
