[metadata]
name = AREPO Helper Library
version = 1.0
description = Various functions and class definitions to help create and analyse AREPO simulations.
author = Uri Pierre Burmester
author_email = uri.burmester@anu.edu.au
platforms = unix, linux
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9

[options]
packages =
    arepo_helper
install_requires =
    numpy
python_requires = >=3.9
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    matplotlib>=3.3.3
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
arepo_helper = py.typed

[flake8]
ignore = E221, W605, W504, E127, E126
max-line-length = 160